--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "snap-smmary",
+  "name": "snap-summary",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,6 +15,7 @@
     "date-fns": "3.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "9.1.2",
     "react-router-dom": "6.23.0",
     "redux": "5.0.1",
     "uuid": "10.0.0"
