--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "3.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-redux": "9.1.2",
     "react-router-dom": "6.23.0",
     "redux": "5.0.1",
@@ -25,14 +26,14 @@
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
+    "autoprefixer": "10.4.20",
     "eslint": "^9.11.1",
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.9.0",
-    "vite": "^5.4.8",
-    "autoprefixer": "10.4.20",
     "postcss": "8.4.41",
-    "tailwindcss": "3.4.3"
+    "tailwindcss": "3.4.3",
+    "vite": "^5.4.8"
   }
 }
